unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/ucinn_ascendv2__Generated_Email__c.object-meta.xml
<CustomObject>
    <label>Generated Email</label>
    <nameField>
        <displayFormat>GE-{00000000}</displayFormat>
        <label>Generated Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generated Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>