unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Generated Emails</relationshipLabel>
    <relationshipName>Generated_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>