unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Generated Emails</relationshipLabel>
    <relationshipName>Generated_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>