unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>