unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>