unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Event_Information__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Event_Information__c</fullName>
    <label>Event Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>