unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Gift_or_Pledge__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_or_Pledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift or Pledge</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Generated Emails</relationshipLabel>
    <relationshipName>Generated_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>