unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Impact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Impact__c</fullName>
    <inlineHelpText>Add some words about what the gift accomplishes, program outcomes, or benefits to donating.</inlineHelpText>
    <label>Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>