unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Is_Sent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sent</label>
    <type>Checkbox</type>
</CustomField>