unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Meeting_Information__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Meeting_Information__c</fullName>
    <inlineHelpText>Describe the key points discussed at the meeting, and any agreed upon action or next steps.</inlineHelpText>
    <label>Meeting Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>