unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Name_Link__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Name_Link__c</fullName>
    <formula>HYPERLINK("/" &amp; Id,  Name, '_self')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>