unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organization_Name__c</fullName>
    <defaultValue>$User.CompanyName</defaultValue>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>