unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Program__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Program__c</fullName>
    <defaultValue>$User.CompanyName</defaultValue>
    <inlineHelpText>Enter a brief description of your organization or cause area.</inlineHelpText>
    <label>Program</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>