unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Project__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Project__c</fullName>
    <label>Prompt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ascend - Thank You</fullName>
                <label>Thank You Note</label>
            </value>
            <value>
                <fullName>Ascend - Lapsed Donor Appeal</fullName>
                <label>Lapsed Donor</label>
            </value>
            <value>
                <fullName>Ascend - Planned Giving Appeal</fullName>
                <label>Planned Giving</label>
            </value>
            <value>
                <fullName>Ascend - Prospect Appeal</fullName>
                <label>Welcome Email</label>
            </value>
            <value>
                <fullName>Ascend - Donor Visit Follow Up</fullName>
                <label>Donor Visit Follow Up</label>
            </value>
            <value>
                <fullName>Ascend - Phone Call Script</fullName>
                <label>Phone Call Script</label>
            </value>
            <value>
                <fullName>Ascend - Event Invitation</fullName>
                <label>Event Invitation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>