unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Purpose__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Purpose__c</fullName>
    <inlineHelpText>Provide a description of the purpose of this correspondence.</inlineHelpText>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>