unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Sender__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Generated_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>