unpackaged/main/default/objects/ucinn_ascendv2__Generated_Email__c/fields/ucinn_ascendv2__Strategy__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Strategy__c</fullName>
    <inlineHelpText>Indicate the gift type(s) you would like the donor to consider, and the next steps that the donor can take to start making their plan.</inlineHelpText>
    <label>Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>